# QtC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.zig  build.zig.zon  build_c_example.sh  flake.nix  make_template.sh  qt-c  shell.nix
include/: QApplication.h  QPushButton.h  QWidget.h
include/QtC/: application.h  object.h
include/QtC5/: layout.h
include/QtC6/: abstractbutton.h  abstractitemview.h  abstractscrollarea.h  application.h  boxlayout.h  columnview.h  frame.h  icon.h  label.h  layout.h  lineedit.h  listview.h  listwidget.h  mainwindow.h  menubar.h  object.h  paintdevice.h  pixmap.h  progressbar.h  pushbutton.h  qt.h  string.h  stringlist.h  tabwidget.h  treeview.h  treewidget.h  treewidgetitem.h  widget.h
lib/: AbstractButton.zig  AbstractItemView.zig  AbstractScrollArea.zig  Application.zig  BoxLayout.zig  ColumnView.zig  Frame.zig  Icon.zig  Label.zig  Layout.zig  LineEdit.zig  ListView.zig  ListWidget.zig  MainWindow.zig  MenuBar.zig  Object.zig  PaintDevice.zig  Pixmap.zig  ProgressBar.zig  PushButton.zig  QApplication.cpp  QApplication.zig  QPushButton.cpp  QPushButton.zig  QWidget.cpp  QWidget.zig  TabWidget.zig  TreeView.zig  TreeWidget.zig  TreeWidgetItem.zig  Widget.zig  abstractbutton.cpp  abstractitemview.cpp  abstractscrollarea.cpp  application.cpp  boxlayout.cpp  columnview.cpp  frame.cpp  icon.cpp  label.cpp  (+21 more)
lib/cppmangle/: dump_symbols.sh  dump_symbols.sh.new  itanium.zig  main.zig  root.zig  testlib.cpp
lib/layouts/: BoxLayout.zig  boxlayout.cpp
lib/widgets/: Label.zig  PushButton.zig  (+5 more)
src/: main.c  main.zig
(+23 files in other folders)
